Fix overlapping text in short-post-listing due to line-height
git-svn-id: svn://svn.digitalblueprint.co.uk/viper/trunk@115 31e3d8c1-9a35-0410-80f7-bb7063ef511c

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -838,7 +838,7 @@ a, a#visited {
 
 /* Short Post List */
 .short-post-listing {
-	line-height: 0.5em;
+	line-height: 1.2em;
 	padding: 8px;
 	background-color: #eeeeee;
 	margin: 0 0 4px 0;
